// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitLogin saga generator should call the repoLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`submitLogin saga generator should call the repoLoadingError action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`submitLogin saga generator should call the repoLoadingError action if the response errors 3`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "imadethis/LoginPage/LOGIN_FAILURE",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`submitLogin saga generator should dispatch the loginSuccess action if request is successfull 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`submitLogin saga generator should dispatch the loginSuccess action if request is successfull 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`submitLogin saga generator should dispatch the loginSuccess action if request is successfull 3`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/api/auth/login",
      Object {
        "body": "{\\"password\\":{\\"access_token\\":\\"_JWT_\\"}}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
